--- a/_includes/about/timeline.html
+++ b/_includes/about/timeline.html
@@ -4,7 +4,7 @@
       <div class="timeline-item">
         <div class="content">
           <h2>{{ item.title }}</h2>
-          <h6 class="date">{{ item.from }} —  Helloooo {{ item.to }}</h6>
+          <h6 class="date">{{ item.period }}</h6>
           <p>{{ item.description }}</p>
         </div>
       </div>
