--- a/_includes/about/timeline.html
+++ b/_includes/about/timeline.html
@@ -5,8 +5,7 @@
         <div class="content">
           <h2>{{ item.title }}</h2>
           <h6 class="date">{{ item.period }}</h6>
-          <!--<p>{{ item.description }}</p>-->
-          <body>{{ item.description }}</body>
+          <p>{{ item.description }}</p>
         </div>
       </div>
     {% endfor %}
