--- a/_includes/events/event.html
+++ b/_includes/events/event.html
@@ -1,6 +1,6 @@
 <div class="col mt-4">
   <div class="timeline-body bg-themed">
-    {% for item in site.data.entry %}
+    {% for item in site.data.timeline %}
       <div class="timeline-item">
         <div class="content">
           <h2>{{ item.title }}</h2>
