--- a/_includes/events/event.html
+++ b/_includes/events/event.html
@@ -7,7 +7,7 @@
           <h5>{{ item.location }}</h5>
           <h6 class="date">{{ item.period }}</h6>
           <p>{{ item.description }}</p>
-          <p><a href={{ item.link }}>More on this...</a></p>
+          <p><a href="{{ item.link }}">More on this...</a></p>
         </div>
       </div>
     {% endfor %}
