--- a/_includes/events/event.html
+++ b/_includes/events/event.html
@@ -1,5 +1,5 @@
 <div class="col mt-4">
-  <div class="event-body bg-themed">
+  <div class="timeline-body bg-themed">
     {% for item in site.data.events %}
       <div class="event-item">
         <div class="content">
