--- a/_includes/events/event.html
+++ b/_includes/events/event.html
@@ -1,7 +1,7 @@
 <div class="col mt-4">
   <div class="timeline-body bg-themed">
     {% for item in site.data.events %}
-      <div class="event-item">
+      <div class="timeline-item">
         <div class="content">
           <h2>{{ item.title }}</h2>
           <h5>{{ item.location }}</h5>
