--- a/_sass/_event.scss
+++ b/_sass/_event.scss
@@ -3,6 +3,27 @@
   border-radius: 0 $rounded-borders $rounded-borders 0;
   padding: 5px 0;
 
+  &:before,
+  &:after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 4px solid $primary;
+    background-color: $light;
+    position: absolute;
+    top: 8px;
+    z-index: 10;
+  }
+
+  &:before {
+    left: -12px;
+  }
+
+  &:after {
+    right: -12px;
+  }
+
   &:after {
     // Left Border
     content: "";
@@ -16,20 +37,6 @@
 
   .event-item {
     position: relative;
-
-    &:after {
-      // Circle
-      content: "";
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      border: 4px solid $primary;
-      background-color: $light;
-      position: absolute;
-      left: -12px;
-      top: 8px;
-      z-index: 10;
-    }
 
     .content {
       margin: 40px;
