--- a/_sass/_event.scss
+++ b/_sass/_event.scss
@@ -3,27 +3,6 @@
   border-radius: 0 $rounded-borders $rounded-borders 0;
   padding: 5px 0;
 
-  &:before,
-  &:after {
-    content: "";
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    border: 4px solid $primary;
-    background-color: $light;
-    position: absolute;
-    top: 8px;
-    z-index: 10;
-  }
-
-  &:before {
-    left: -12px;
-  }
-
-  &:after {
-    right: -12px;
-  }
-
   &:after {
     // Left Border
     content: "";
@@ -38,9 +17,24 @@
   .event-item {
     position: relative;
 
+    &:before,
+    &:after {
+      // Circle
+      content: "";
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      border: 4px solid $primary;
+      background-color: $light;
+      position: absolute;
+      left: -12px;
+      top: 8px;
+      z-index: 10;
+    }
+
     .content {
       margin: 40px;
-      padding-bottom: 5px;
+      padding-bottom: 20px;
       border-bottom: 1px dashed $dark;
 
       .date {
