--- a/_sass/_event.scss
+++ b/_sass/_event.scss
@@ -10,14 +10,13 @@
     height: 100%;
     background-color: $primary;
     position: absolute;
-    left: -4px;
+    right: -4px;
     top: 0;
   }
 
   .event-item {
     position: relative;
-
-    &:before,
+    
     &:after {
       // Circle
       content: "";
@@ -27,7 +26,7 @@
       border: 4px solid $primary;
       background-color: $light;
       position: absolute;
-      left: -12px;
+      right: -12px;
       top: 8px;
       z-index: 10;
     }
