--- a/_sass/_event.scss
+++ b/_sass/_event.scss
@@ -1,6 +1,6 @@
 .event-body {
   position: relative;
-  border-radius: 0 $rounded-borders $rounded-borders 0;
+  border-radius: $rounded-borders 0 0 $rounded-borders;
   padding: 5px 0;
 
   &:after {
@@ -10,7 +10,7 @@
     height: 100%;
     background-color: $primary;
     position: absolute;
-    left: -4px;
+    right: -4px;
     top: 0;
   }
 
@@ -26,7 +26,7 @@
       border: 4px solid $primary;
       background-color: $light;
       position: absolute;
-      left: -12px;
+      right: -12px;
       top: 8px;
       z-index: 10;
     }
