--- a/_sass/_event.scss
+++ b/_sass/_event.scss
@@ -1,6 +1,6 @@
 .event-body {
   position: relative;
-  border-radius: $rounded-borders 0 0 $rounded-borders;
+  border-radius: 0 $rounded-borders $rounded-borders 0;
   padding: 5px 0;
 
   &:after {
@@ -10,7 +10,7 @@
     height: 100%;
     background-color: $primary;
     position: absolute;
-    right: -4px;
+    left: -4px;
     top: 0;
   }
 
@@ -26,14 +26,14 @@
       border: 4px solid $primary;
       background-color: $light;
       position: absolute;
-      right: -12px;
+      left: -12px;
       top: 8px;
       z-index: 10;
     }
 
     .content {
       margin: 40px;
-      padding-bottom: 2px;
+      padding-bottom: 20px;
       border-bottom: 1px dashed $dark;
 
       .date {
